force-app/main/default/objects/Bundle__c/Bundle__c.object-meta.xml
<CustomObject>
    <label>Product Bundle</label>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Bundle Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Bundles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>