force-app/main/default/objects/Bundle__c/fields/Confirmation_Number__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Number__c</fullName>
    <label>Confirmation Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>