force-app/main/default/objects/Bundle__c/fields/Qty__c.field-meta.xml
<CustomField>
    <fullName>Qty__c</fullName>
    <label>Qty</label>
    <summarizedField>Bundle_Item__c.Qty__c</summarizedField>
    <summaryForeignKey>Bundle_Item__c.Bundle__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>