force-app/main/default/objects/Bundle__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Submitted to Distributors</fullName>
            </value>
            <value>
                <fullName>Ordered by Distributor</fullName>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
            <value>
                <fullName>Approved by Manufacturing</fullName>
                <isActive>false</isActive>
                <label>Approved by Manufacturing</label>
            </value>
            <value>
                <fullName>Ordered</fullName>
                <isActive>false</isActive>
                <label>Ordered</label>
            </value>
            <value>
                <fullName>Submitted to Distributor</fullName>
                <isActive>false</isActive>
                <label>Submitted to Distributor</label>
            </value>
            <value>
                <fullName>Submitted to Manufacturing</fullName>
                <isActive>false</isActive>
                <label>Submitted to Manufacturing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>